Update the swagger file (Added Rename/Move/Update option on Update)
Create rename funtion
